src/app/_ui/globals.css
/**
 * @description Global styles
 * @author      C. M. de Picciotto <d3p1@d3p1.dev> (https://d3p1.dev/)
 */
@import "tailwindcss";

@theme {
  --color-primary: #000000;
  --color-secondary-100: #ffffff;
  --color-secondary-500: #717171;
}

@utility token {
  &::before {
    content: '[';
  }
  &::after {
    content: ']';
  }
}

@layer base {
  html {
    font-size: 0.875rem;
  }

  body {
    @apply bg-primary text-secondary-100 leading-12;
  }

  h1, h2, h3 {
    @apply token uppercase;
  }

  h1, h2, h3, h4 {
    @apply font-black;
  }

  h1 {
    @apply text-xl lg:text-2xl tracking-widest;
  }

  h2 {
    @apply text-lg lg:text-xl;
  }

  h3, h4 {
    @apply text-base lg:text-lg;
  }
}

